kubernetes/apps/networking/error-pages/app/ingressroute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: error-pages
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: HostRegexp(`.+`)
      priority: 1
      services:
        - kind: Service
          name: error-pages
          port: 8080
